# kalman-filter

./: Cargo.toml
src/: lib.rs
tests/: kalman_filter.rs
tests/data/: lh-kalman-another-example.json  lh-kalman-moving-2.json  lh-kalman-outlier-2.json  lh-kalman-outlier.json  lh-kalman-stopped-outlier.json
tests/model/: kalman_coordinate.rs  mod.rs
