[package]
name = "kalman-filter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31"
geo = "0.22"

[dependencies.proj]
features = ["bundled_proj"]
version = "0.27.0"

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.chrono]
features = ["serde"]
version = "0.4"

[dev-dependencies.serde]
features = ["derive"]
version = "1"

